# Schema-Sense

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  constants.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schema.py
backend/app/services/: csv_parser.py  ddl_generator.py  description_generator.py  schema_inference.py
backend/app/utils/: error_handler.py  serialization.py
backend/tests/: test_modular_structure.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  index.css  index.tsx  vite-env.d.ts
frontend/src/components/: FileUpload.tsx  ResultsView.tsx
frontend/src/constants/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: validation.ts
