[project]
name = "schemasense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "chardet>=5.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
]
